[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/actors/objects/breakable_block/breakable_block.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/objects/breakable_block/breakable_block.png" type="Texture" id=2]
[ext_resource path="res://scenes/actors/objects/breakable_block/break.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/actors/mario/particles/dust.png" type="Texture" id=4]
[ext_resource path="res://scenes/actors/objects/breakable_block/particles.png" type="Texture" id=5]
[ext_resource path="res://scenes/actors/objects/breakable_block/block_material.tres" type="Material" id=6]
[ext_resource path="res://scenes/actors/objects/breakable_block/1_wide.png" type="Texture" id=7]
[ext_resource path="res://scenes/actors/objects/breakable_block/2_wide.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 36, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 100.541 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 100, 10 )

[sub_resource type="CanvasItemMaterial" id=8]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=9]
particles_animation = true
particles_anim_h_frames = 10
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
direction = Vector3( 1, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 50, 0 )
initial_velocity = 16.67
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.75
color_ramp = SubResource( 11 )
anim_speed = 1.0

[node name="BreakableBlock" type="Node2D"]
z_index = -1
script = ExtResource( 1 )

[node name="Length1" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="Length2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 8 )

[node name="Length3" type="NinePatchRect" parent="."]
visible = false
margin_left = -48.0
margin_top = -16.0
margin_right = 48.0
margin_bottom = 16.0
texture = ExtResource( 2 )
patch_margin_left = 32
patch_margin_right = 32
axis_stretch_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
collision_mask = 2147483654

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="StompArea" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea"]
position = Vector2( 0, -31 )
shape = SubResource( 2 )

[node name="SpinArea" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpinArea"]
shape = SubResource( 3 )

[node name="TurboSpinArea" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurboSpinArea"]
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="PlayerStompDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerStompDetector"]
shape = SubResource( 6 )

[node name="PlayerSpinDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSpinDetector"]
shape = SubResource( 7 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
process_parent = true
physics_process_parent = true

[node name="Broken" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="BreakParticle" type="Particles2D" parent="."]
material = SubResource( 8 )
z_index = -1
emitting = false
amount = 12
one_shot = true
explosiveness = 1.0
process_material = ExtResource( 6 )
texture = ExtResource( 5 )

[node name="DustParticle" type="Particles2D" parent="."]
material = SubResource( 9 )
z_index = -1
emitting = false
amount = 3
one_shot = true
explosiveness = 1.0
process_material = SubResource( 12 )
texture = ExtResource( 4 )
